# audio-track-editor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AI_HANDOFF.md  architecture.md  first-test.md  local-media.md  model-setup.md  prompt-history.md  update-cleanup.md
scripts/: cache-model.ps1  clean-local.ps1  doctor.ps1  install-ml.ps1  launch.ps1  run-first-test.ps1  setup.ps1
src/audio_track_editor/: __init__.py  __main__.py  analysis.py  cli.py  config.py  diarization.py  doctor.py  media.py  model_setup.py  muting.py  preview.py  renderer.py  schemas.py  subtitles.py  timeline.py
src/audio_track_editor/gui/: app.py
tests/: test_config.py  test_diarization.py  test_media.py  test_muting.py  test_packaging.py  test_renderer.py  test_schemas.py  test_subtitles.py  test_timeline.py
